name:                twitch-aoe
version:             0.2.0.0
synopsis:            Brief example on using persistent with servant
description:         Brief example on using persistent with servant
license:             MIT
license-file:        LICENSE
author:              Josh Cough
maintainer:          joshcough@gmail.com
copyright:           2018 Josh Cough
category:            Web
build-type:          Simple
cabal-version:       >=1.18

source-repository head
    type:
        git
    location:
        https://bitbucket.org/joshcough/twitchaoe-server

executable twitch-aoe-server
    main-is: Main.hs
    build-depends: base >=4.11 && <4.13, twitch-aoe
    hs-source-dirs: app
    default-language: Haskell2010
    ghc-options: -fwarn-unused-imports -Wall -Werror -Werror -fwarn-unused-binds -fwarn-unused-imports
    default-extensions:  OverloadedStrings TypeApplications ScopedTypeVariables AllowAmbiguousTypes NamedFieldPuns
                         FlexibleContexts TypeFamilies TypeOperators MultiParamTypeClasses FlexibleInstances GADTs
                         DataKinds ConstraintKinds DeriveGeneric QuasiQuotes RankNTypes TypeSynonymInstances
                         LambdaCase RecordWildCards DeriveFunctor FunctionalDependencies TemplateHaskell TupleSections

library
    default-language:
        Haskell2010
    default-extensions:  OverloadedStrings TypeApplications ScopedTypeVariables AllowAmbiguousTypes NamedFieldPuns
                         FlexibleContexts TypeFamilies TypeOperators MultiParamTypeClasses FlexibleInstances GADTs
                         DataKinds ConstraintKinds DeriveGeneric DeriveFoldable DeriveTraversable QuasiQuotes RankNTypes
                         TypeSynonymInstances LambdaCase RecordWildCards DeriveFunctor FunctionalDependencies
                         TemplateHaskell TupleSections
    hs-source-dirs:
        src
    exposed-modules:
        Config
      , Error
      , Init
      , Logging
      , Settings
      , Types
      , ChatBot.ChatBotWS
      , ChatBot.Config
      , ChatBot.Models
      , ChatBot.Parsers
      , Util.Utils
    build-depends:
        base >=4.11 && <4.13
      , aeson
      , aeson-pretty
      , amazonka
      , amazonka-s3
      , async
      , bcrypt
      , binary
      , blaze-html
      , blaze-markup
      , bytestring
      , conduit
      , containers
      , directory
      , esqueleto
      , exceptions
      , fast-logger
      , filepath
      , foreign-store
      , HTTP
      , http-api-data
      , irc-core
      , jose
      , lens
      , lens-aeson
      , MissingH
      , monad-control
      , monad-logger
      , mtl
      , nano-http >=0.1.1
      , network
      , persistent
      , persistent-postgresql
      , persistent-template
      , postgresql-simple-url
      , postgresql-simple
      , purescript-bridge >= 0.13
      , resourcet
      , resource-pool
      , rollbar
      , safe
      , servant >= 0.13 && <= 0.14.1
      , servant-auth >=0.3.1.0
      , servant-auth-server
      , servant-blaze
      , servant-multipart
      , servant-server >= 0.13 && <= 0.14.1
      , servant-websockets
      , stm
      , string-conversions
      , template-haskell
      , text
      , time
      , transformers
      , transformers-base
      , trifecta
      , unliftio-core
      , unordered-containers
      , uuid
      , vector
      , wai
      , warp
      , websockets
      , zip
    ghc-options:
        -fwarn-unused-imports -Wall -fwarn-unused-binds -fwarn-unused-imports
        -- -ddump-splices

test-suite twitch-aoe-test
    type:
        exitcode-stdio-1.0
    hs-source-dirs:
        test
    main-is:
        Spec.hs
    other-modules:
        Auth.TeamDbSpec
        Auth.TeamServerWaiSpec
        Auth.UserDbSpec
        Auth.UserServerWaiSpec
        Helpers
        Overlays.AdminServerWaiSpec
        Overlays.SceneDbSpec
        Overlays.SceneServerWaiSpec
        Overlays.WebsocketServerWaiSpec
        Util.UtilsSpec
    build-depends:
        base >=4.11 && <4.13
      , aeson
      , aeson-pretty
      , bytestring
      , hspec
      , hspec-wai
      , hspec-wai-json
      , http-types
      , monad-metrics
      , mtl
      , persistent
      , persistent-postgresql
      , QuickCheck
      , servant-auth-server
      , text
      , twitch-aoe
      , uuid
      , wai
      , wai-extra
      , warp
    ghc-options:
        -threaded -rtsopts -with-rtsopts=-N -fwarn-unused-imports  -Wall -fwarn-unused-binds -fwarn-unused-imports
    default-language:
        Haskell2010
    default-extensions:  OverloadedStrings TypeApplications ScopedTypeVariables AllowAmbiguousTypes NamedFieldPuns
                         FlexibleContexts TypeFamilies TypeOperators MultiParamTypeClasses FlexibleInstances GADTs
                         DataKinds ConstraintKinds DeriveGeneric QuasiQuotes RankNTypes TypeSynonymInstances
                         LambdaCase RecordWildCards DeriveFunctor FunctionalDependencies TemplateHaskell TupleSections
